# numerica

./: .gitignore  README.md  main.py  pyproject.toml
examples/ode/: lotka_volterra.py  order.py
examples/pde/fvm/: advection_1d.py  burgers_inviscid_1d.py
examples/roots/: cos.py  cosine.py  exponential.py  fifth.py  fixed_point.py
src/numerica/ode/: __init__.py  euler.py  heun.py  midpoint.py  rk4.py  taylor.py  time_integrator.py
src/numerica/pde/fvm/: __init__.py  _fvm_1d.py  _riemann_solvers.py
src/numerica/pde/fvm/models/: __init__.py  advection_1d.py  burgers_inviscid_1d.py
src/numerica/plot/: __init__.py  function.py
src/numerica/roots/: __init__.py  bisection.py  fixed_point.py  regula_falsi.py  secant.py  utils.py
src/numerica/utils/: __init__.py  ncfile.py
