[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerica"
version = "0.1.0"
description = "Numerical methods library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "nramirez", email = "nramirez@uma.es"}
]

dependencies = [
    "numpy",
    "matplotlib",
    "netcdf4",
]

[project.urls]
Repository = "https://github.com/nramirez-f/numerica.git"

[tool.setuptools.packages.find]
where = ["src"]
